--- a/nextflow.config
+++ b/nextflow.config
@@ -44,7 +44,7 @@ profiles {
 
     slurm {
         process.executor = 'slurm'
-        process.queue = 'batch'
+        process.queue = 'fat'
 	process.clusterOptions="--constraint=avx2"
     }
 
